--- a/static/main.css
+++ b/static/main.css
@@ -17,7 +17,7 @@ body{
 /* Float four columns side by side */
 .column{
   float: left;
-  width: 25%;
+  width: 23%;
   padding: 0 10px;
 }
 
@@ -43,6 +43,7 @@ body{
 /* Style the counter cards */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-sizing: border-box ;
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
