Added comments in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+<!-- Base html contains common part across pages-->
+<!-- Other pages like index, post will extends base.html-->
+<!-- page specific contents would be wrapped under <%block Content %>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
