--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,14 @@
   
   <div class="row">
     <div class="column"> 
+      
       <div class="card">
-        <h2> {{ post.title }} </h2>
+        <a href="{{ url_for('post', post_id=post.id ) }}">
+          <h2> {{ post.title }} </h2>
+        </a>
         <h3> created by {{ post.author }} </h3>
-      </div>     
+      </div> 
+      
       </div>
     </div>
     {% endfor %}
